# devcontainer-python

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
PyContainer/: main.py
pycontainer/: main.py
src/: main.py
src/project/: config.py
src/project/package/: demo.py
