[tool.poetry]
name = "WoWBot"
version = "0.1.0"
description = ""
authors = ["Evan Pierce <evanpierce@aim.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
