[tool.poetry]
name = "pycontainer"
version = "0.1.0"
description = ""
authors = ["Evan Pierce <evanpierce@aim.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poethepoet = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
#test       = "pytest --cov=poethepoet"                                # simple command based task
#mksandwich = { script = "my_package.sandwich:build" }                 # python script based task
#tunnel     = { shell = "ssh -N -L 0.0.0.0:8080:$PROD:8080 $PROD &" }  # shell script based task
start = {script = "pycontainer.main:main"}